Finish first version of modal and card modal, change minor things on all view card component, correct z-index on side-bar and top-bar to be inferior to z-index of modal

--- a/src/components/home/Card.scss
+++ b/src/components/home/Card.scss
@@ -50,6 +50,9 @@
 
     }
   }
+  &__back-content, &__front-content {
+    text-align: center;
+  }
 
   &__md-edit-icon, &__md-trash-icon {
     height: 20px;
