--- a/src/components/home/SideBar.scss
+++ b/src/components/home/SideBar.scss
@@ -8,7 +8,7 @@
   top: $top-bar-height;
   transition: left .25s ease;
   width: $side-bar-width;
-  z-index: 999;
+  z-index: 99;
 
   &--opened {
     left: 0;
