--- a/src/components/home/TopBar.scss
+++ b/src/components/home/TopBar.scss
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 999;
+  z-index: 99;
 
   // Inner TopBar
   &__inner {
